fix(headless-styles): remove unnecessary overflow for table

--- a/packages/headless-styles/src/components/Table/tableCSS.module.css
+++ b/packages/headless-styles/src/components/Table/tableCSS.module.css
@@ -3,7 +3,6 @@
   border-spacing: 0;
   display: table;
   font-variant-numeric: lining-nums tabular-nums;
-  overflow: hidden;
   width: 100%;
 }
 
